@@ -1,5 +1,9 @@
 2002-08-22  Radek Doulik  <rodo@ximian.com>
 
+	* gtkhtml.c (drag_begin): select dragged object
+	(dnd_link_set): no dnd in edit mode
+	(dnd_link_unset): ditto
+
 	* htmlengine.c (html_engine_stream_write): in case size == -1
 	calculate length of buffer
 
